--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,8 @@ jobs:
             echo "SSH_HOST must be a plain hostname like ssh.example.com"
             exit 1
           fi
+          echo "Resolved SSH host: $HOST"
+          echo "Resolved SSH port: $PORT"
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
