--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,22 +30,23 @@ jobs:
           fi
           echo "Resolved SSH host: $HOST"
           echo "Resolved SSH port: $PORT"
+          echo "SSH_HOST_RESOLVED=$HOST" >> $GITHUB_ENV
+          echo "SSH_PORT_RESOLVED=$PORT" >> $GITHUB_ENV
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          cat >> ~/.ssh/config <<EOF
-          Host tunnel-host
-            HostName $HOST
-            Port $PORT
-            User ${{ secrets.SSH_USER }}
-            IdentityFile ~/.ssh/id_rsa
-            ProxyCommand cloudflared access ssh --hostname $HOST:$PORT --service-token-id ${{ secrets.CF_ACCESS_CLIENT_ID }} --service-token-secret ${{ secrets.CF_ACCESS_CLIENT_SECRET }}
-            StrictHostKeyChecking no
-          EOF
 
       - name: Deploy via SSH (Cloudflare Tunnel)
         run: |
-          ssh tunnel-host <<'EOF'
+          LOCAL_PORT=2222
+          cloudflared access tcp \
+            --hostname "$SSH_HOST_RESOLVED" \
+            --service-token-id "${{ secrets.CF_ACCESS_CLIENT_ID }}" \
+            --service-token-secret "${{ secrets.CF_ACCESS_CLIENT_SECRET }}" \
+            --url "127.0.0.1:$LOCAL_PORT" \
+            >/tmp/cloudflared.log 2>&1 &
+          sleep 2
+          ssh -p $LOCAL_PORT -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@127.0.0.1 <<'EOF'
           cd /mnt/CUHA_BOT
           git pull
           docker compose up -d --build
